<resources>
    <string name="app_name">BakingApp</string>
    <string name="detail_recipes">DetailRecipe</string>
    <string name="recipe_ingredients">Recipe Ingredients</string>
    <string name="Steps">Steps</string>
    <string name="description">Description</string>
    <string name="back_to_previous">Back</string>
    <string name="next_step">Next</string>
    <string name="restart">Restart</string>
    <string name="appwidget_text">BAKING APP</string>
    <string name="configure">List to display</string>
    <string name="add_widget_recipe">Add Recipes</string>
    <string name="add_widget_ingredients">Add Ingredients</string>
    <string name="recipes">Baking Recipes</string>
    <string name="empty_view_text">Ingredient list is empty</string>
    <string name="baking_text">Check App to updated widget</string>
    <string name="baking_now">BakingApp widget!!</string>
    <string name="add_widget">Add widget</string>
    <string name="change_recipe">Change Recipe</string>
    <string name="servings">Serves: </string>
    <string name="title">title</string>
    <string name="ingredients">ingredients</string>
    <string name="steps">steps</string>
    <string name="arguments_ingredients">arguments_ingredients</string>
    <string name="arguments_description">description</string>
    <string name="arguments_video">video</string>
    <string name="position">position</string>
    <string name="check_connection">Network is no available check connection </string>
    <string name="arguments_image">imageThumbnail</string>
    <string name="recipeList">RecipeList</string>

</resources>
