<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/cardview_light_background">

    <!-- display list of recipes -->
<android.support.v7.widget.RecyclerView
    android:id="@+id/recipe_recycleView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fragment_text_margin_left"/>
</LinearLayout>
