...
            android:id="@+id/viewlineTop"
            android:paddingTop="@dimen/fragment_text_padding_top"
            android:layout_width="match_parent"
            android:layout_height="@dimen/View_height"
            android:background="@color/colorPrimary"/>
            <TextView
                android:id="@+id/text_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="description here"
                style="@style/TextStyle"
                android:layout_marginLeft="@dimen/fragment_text_margin_left"
                android:layout_marginTop="@dimen/fragment_text_margin_top"/>
...
