...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recipe_details_step_recycleView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:padding="@dimen/fragment_text_margin"/>
        </LinearLayout>
    </LinearLayout>
...
